Rename UML to nimble in the documentation folder

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -132,9 +132,9 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/UML.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/nimble.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/UML.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/nimble.qhc"
 
 applehelp:
 	$(SPHINXBUILD) -b applehelp $(ALLSPHINXOPTS) $(BUILDDIR)/applehelp
@@ -149,8 +149,8 @@ devhelp:
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/UML"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/UML"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/nimble"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/nimble"
 	@echo "# devhelp"
 
 epub:
