--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,6 @@
 [run]
 branch = True
+source = nimble,tests
 omit =
     */.local/*
     lint.py
@@ -10,7 +11,6 @@ omit =
     tests/assertionHelpers.py
 
 [report]
-ignore_errors = True
 skip_covered = True
 exclude_lines =
     # ignore lines that do nothing
