split core.py to create.py and learn.py

--- a/.coveragerc
+++ b/.coveragerc
@@ -8,7 +8,7 @@ omit =
     testProf.py
     documentation/*
     examples/*
-    tests/assertionHelpers.py
+    tests/helpers.py
 
 [report]
 skip_covered = True
