--- a/.pylintrc
+++ b/.pylintrc
@@ -143,7 +143,8 @@ disable=print-statement,
         comprehension-escape,
         useless-object-inheritance,
         protected-access,
-        protected-member
+        protected-member,
+        comparison-with-itself
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
