web-friendly accordion cheatsheet

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 configuration.ini
 documentation/doctrees
 documentation/html
+documentation/source/_static/cheatsheet.html
+documentation/source/cheatsheet.rst
 documentation/source/_static/cheatsheet.pdf
 documentation/source/examples/Metro_Interstate_Traffic_Volume_Cleaned.csv
 .coverage
