--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -91,6 +91,9 @@ clean:
 	rm -fr $(PUBLISHDIR)/examples
 	rm -fr $(PUBLISHDIR)/docs
 	rm -fr $(SOURCEDIR)/docs/generated
+	rm -fr $(SOURCEDIR)/_static/cheatsheet.html
+	rm -fr $(SOURCEDIR)/_static/cheatsheet.pdf
+	rm -fr $(SOURCEDIR)/cheatsheet.rst
 	rm -fr $(EXAMPLESDIR)/logs-nimble
 	rm -fr $(EXAMPLESDIR)/*.ipynb
 	rm -f $(EXAMPLESDIR)/Metro_Interstate_Traffic_Volume_Cleaned.csv
