Modernize testing config and execution
Removes the need for runTests by correctly applying the same effects
to each test run via pytest.ini changes. First steps towards refactoring
conftest.py to be more in line with pytest's intended usage.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,5 @@
 [pytest]
 python_files = test*.py *test.py *Test.py *tests.py *Tests.py
+addopts = --doctest-modules
+norecursedirs = documentation
+testpaths = nimble tests
