--- a/conda_recipe/meta.yaml
+++ b/conda_recipe/meta.yaml
@@ -12,12 +12,12 @@ requirements:
   build:
     - python {{ python }}
     - setuptools
-    - numpy>=1.14,<1.24
-    - packaging>=20.0,<=21.3
+    - numpy>=1.14
+    - packaging>=20.0
   run:
     - python {{ python }}
-    - numpy>=1.14,<1.24
-    - packaging>=20.0,<=21.3
+    - numpy>=1.14
+    - packaging>=20.0
 
 outputs:
   - name: nimble
@@ -27,13 +27,13 @@ outputs:
       run:
         - python
         - pandas>=0.24
-        - scipy>=1.1,<1.9
+        - scipy>=1.1
         - matplotlib>=3.1
         - cloudpickle>=1.0
         - requests>2.12
         - h5py>=2.10
         - python-dateutil>=2.6
-        - scikit-learn >=1.0
+        - scikit-learn>=1.0
         - {{ pin_subpackage('nimble', max_pin="x.x.x.x") }}
       run_constrained:
         - keras>=2.0
