Polish the current workflows, make the needed pyproject.toml changes

--- a/.github/workflows/dummy_buildWheels.yml
+++ b/.github/workflows/dummy_buildWheels.yml
@@ -1,17 +1,24 @@
+# buildWheels.yml output matching replacement.
+#
 # Instead of actually building, it grabs a wheel from the repo at the specified
-# location and saves it in the same way as buildAndSave would. This allows for
+# location and saves it in the same way as buildWheels would. This allows for
 # trialing the rest of the workflow without having to recompile a wheel.
 #
-# Currently, no such folder exists in the repo.
+# Currently, no such folder exists in the repo; during manual testing such
+# a folder would need to be added and filled.
+#
+# Effects: artifact containing the wheels is saved
 
-name: BuildAndSave
+name: BuildWheels(Dummy)
 
 on:
   workflow_call:
     inputs:
+      # The name of the artifact to be saved
       saveName:
         required: true
         type: string
+      # Path to the folder of wheels to be saved
       dummyPath:
         required: true
         type: string
@@ -26,7 +33,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-          
+
       - uses: actions/upload-artifact@v3
         with:
           name: ${{inputs.saveName}}
