--- a/.github/workflows/buildWheels.yml
+++ b/.github/workflows/buildWheels.yml
@@ -1,16 +1,23 @@
-name: BuildAndSave
+# Build wheels and save as artifact, to either be manually downloaded,
+# or chained as a precursor job within another action.
+#
+# Effects: artifact containing all built wheels saved.
+
+name: BuildWheels
 
 # For inclusion in the publishing pipeline, we need the _call,
 # we also allow direct access to this action for piecewise
-# debugging. Will eventually be automated on pushing to master.
+# debugging.
 on:
   workflow_call:
     inputs:
+      # The name of the artifact to be saved
       saveName:
         required: true
         type: string
   workflow_dispatch:
     inputs:
+      # The name of the artifact to be saved
       saveName:
         required: true
         type: string
@@ -18,8 +25,8 @@ on:
 jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os}}
+    # This will automatically split off concurrent jobs running-on each value
     runs-on: ${{ matrix.os}}
-    # This will automatically split off jobs for concurrency
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -28,7 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # This is supposed to cache the downloads to pip for reuse in this
+      # This is supposed to cache the downloads to pip for reuse later in this
       # pipeline; unclear to what extent what is here accomplishes that.
       - uses: actions/setup-python@v4
         with:
