dev default branch protection error reproduction

--- a/.github/workflows/buildWheels.yml
+++ b/.github/workflows/buildWheels.yml
@@ -29,8 +29,8 @@ jobs:
     runs-on: ${{ matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-#        os: [ubuntu-latest]
+#        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [windows-latest]
 
 
     steps:
@@ -52,8 +52,8 @@ jobs:
         # Allows us to specify cibuildwheel specific environment variables.
         # Included in the comment was something helpful to limit the build
         # output during trialing.
-#        env:
-#          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.9, <3.10"
+        env:
+          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.9, <3.10"
         with:
           output-dir: wheelhouse
 
