--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ authors = [
         { name="Spark Wave LLC", email="willfind@gmail.com" },
         ]
 description = "Interfaces and tools for data science."
-requires-python = ">=3.8, <3.11"
+requires-python = ">=3.8, <=3.11"
 license = {text = "Proprietary"}
 classifiers = [
         'Development Status :: 3 - Alpha',
@@ -22,6 +22,7 @@ classifiers = [
         'Programming Language :: Python :: 3.8',
         'Programming Language :: Python :: 3.9',
         'Programming Language :: Python :: 3.10',
+        'Programming Language :: Python :: 3.11',
         'Operating System :: OS Independent',
         'License :: Other/Proprietary License',
         ]
