Script to be used to finalize the wheel download table in install.rst
This table is contingent on exactly which wheels were built by the
automated process, and programatically generates the table organization
appropriately.

This also rearranged install.rst so that this table could simply
be appended to the end of the file. This helps with the clarity
overall, but also hides the table in the case that it starts getting
really large.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,6 +106,10 @@ version = {attr = "nimble.__version__"}
 # No 32 bit builds, no pypy builds, no musl linux builds
 skip = ["*-win32", "*-manylinux_i686", "pp*", "*-musllinux_*"]
 
+[tool.cibuildwheel.macos]
+# make sure mac wheels include capability to install on arm
+archs = ["universal2"]
+
 # script to remove .py and .c files from wheel
 #repair-wheel-command = "python remove_source.py {dest_dir} {wheel}"
 # we don't want the extra bundling to occur via auditwheel / delocate
