--- a/.github/workflows/buildWheels.yml
+++ b/.github/workflows/buildWheels.yml
@@ -11,8 +11,12 @@ name: BuildWheels
 on:
   workflow_call:
     inputs:
-      # The name of the artifact to be saved
-      saveName:
+      # The name of the artifact containing the wheels
+      saveNameWheel:
+        required: true
+        type: string
+      # The name of the artifact containing the conda channel
+      saveNameConda:
         required: true
         type: string
 
@@ -57,9 +61,35 @@ jobs:
         with:
           output-dir: wheelhouse
 
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-activate-base: true
+          activate-environment: ""
+
+      - name: Remove Source
+        # bash shell can also be specified even when on windows
+        shell: bash
+        run: |
+          cd wheelhouse
+          pip install wheel
+          for name in *.whl; do
+              python3 ../remove_source.py . $name
+          done
+
+      - name: Conda channel build
+        run: |
+          conda install conda-build
+          conda build conda_recipe/ --output-folder=nimble-data --no-test --no-anaconda-upload --no-activate
+
       # retention days param critical for cost saving wrt free/paid storage.
       - uses: actions/upload-artifact@v3
         with:
-          name: ${{inputs.saveName}}
+          name: ${{inputs.saveNameWheel}}
           path: ./wheelhouse/
+          retention-days: 1
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ${{inputs.saveNameConda}}
+          path: ./nimble-data/
           retention-days: 1
