Correct easy warnings in pytest output +py3.8 import error
1) the 'slow' mark is now properly registered with pytest
2) the specific PendingDeprecation for using np.matrix in testing is now ignored,
we can reassess our tests when it is switched to a true Deprecation warning
3) correct pending api change for scipy.sparse
4) correct escape sequencing for regex defined in unicode strings; currently
warning will be escalated in later python versions
5) avoid a UserWarning when searching for learners in SKL by avoiding  modules
with 'experimental' in the name (which we didn't want anyways)

The importlib.metadata submodule, while available in python 3.8, was sometimes
not direcly accessible when running the tests. It is now imported explicitly
in _dependencies.py

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,7 @@ python_files = test*.py *test.py *Test.py *tests.py *Tests.py
 addopts = --doctest-modules
 norecursedirs = documentation
 testpaths = nimble tests
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+filterwarnings =
+    ignore: .*matrix subclass.*:PendingDeprecationWarning
