building wheel from test workflow attempt

--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -7,6 +7,13 @@ on:
       - nini/githubActionsTests
 
 jobs:
+
+  build-wheels:
+    uses: ./.github/workflows/buildWheels.yml
+    with:
+      saveNameWheel: built_wheel
+      saveNameConda: built_channel
+
   test:
     runs-on: ubuntu-latest
 
