--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -9,24 +9,10 @@ on:
 jobs:
 
   build-wheels:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-          cache: pip
-          cache-dependency-path: pyproject.toml
-
-      - name: Build wheels
-        run: |
-          # Your commands to build wheels here
-          echo "Building wheels..."
-          # Example:
-          pip install wheel
-          python setup.py bdist_wheel
+    uses: ./.github/workflows/buildWheels.yml
+    with:
+      saveNameWheel: built_wheel
+      saveNameConda: built_channel
 
   test:
     needs: build-wheels
@@ -42,8 +28,8 @@ jobs:
           cache: pip
           cache-dependency-path: pyproject.toml
 
-      - name: Install dependencies
-        run: |
+      - name: install nimble and dependencies
+        run: 
           pip install pytest
           pip install keras tensorflow
           pip install nimble[quickstart] --find-links=./documentation/source/wheels # Only if needed 
