--- a/.github/workflows/buildWheels.yml
+++ b/.github/workflows/buildWheels.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ${{ matrix.os}}
     strategy:
       matrix:
-        os: ["windows-latest"]
+        os: ["ubuntu-latest", "windows-latest"]
         #os: ["ubuntu-latest"]
         pyVer: ["cp3*"]
         #pyVer: ["cp3*", "cp39", "cp310", "cp311"]
@@ -42,6 +42,7 @@ jobs:
         with:
           python-version: |
             3.9
+            3.10
           cache: 'pip'
           cache-dependency-path: pyproject.toml
 
