--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: install nimble and dependencies
         run: 
-          pip install pylint
+          pip install pylint==2.14.0
           pip install pytest
           pip install keras tensorflow
           pip install nimble[quickstart] --find-links=./documentation/source/wheels # Only if needed 
