--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -42,4 +42,4 @@ jobs:
           pip install nimble[quickstart] --find-links=./documentation/source/wheels # Only if needed 
 
       - name: Run pytest
-        run: pytest -v
+        run: pytest -v -p no:cacheprovider
