--- a/.github/workflows/deployColab.yml
+++ b/.github/workflows/deployColab.yml
@@ -41,7 +41,7 @@ jobs:
 
       - uses: 'google-github-actions/auth@v2'
         with:
-          credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
+          credentials_json: '${{ secrets.COLAB_CREDENTIALS }}'
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
