--- a/.github/workflows/buildWheels.yml
+++ b/.github/workflows/buildWheels.yml
@@ -3,7 +3,6 @@
 #
 # Effects:
 # - artifact containing all built wheels saved.
-# - artifact containing conda channel is saved
 
 name: BuildWheels
 
@@ -13,10 +12,11 @@ name: BuildWheels
 on:
   workflow_call:
     inputs:
-      # The name of the artifact to be saved
-      saveName:
+      # The name of the artifact containing the wheels
+      saveNameWheel:
         required: true
         type: string
+
 
 jobs:
   build_wheels:
@@ -24,6 +24,7 @@ jobs:
     # This will automatically split off concurrent jobs running-on each value
     runs-on: ${{ matrix.os}}
     strategy:
+      fail-fast: false
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         #os: ["ubuntu-latest"]
@@ -47,7 +48,7 @@ jobs:
           cache-dependency-path: pyproject.toml
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.16.5
+        uses: pypa/cibuildwheel@v2.17.0
         # Allows us to specify cibuildwheel specific environment variables.
         env:
           # Using the input to specifify the matrix, we will either build all
@@ -60,21 +61,13 @@ jobs:
           output-dir: wheelhouse
 
       - name: Build source dist and any py wheel
-        run: python -m build -sdist
-
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-activate-base: true
-          activate-environment: ""
-
-      - name: Conda channel build
         run: |
-          conda install conda-build
-          conda build conda_recipe/ --output-folder=nimble-data --no-test --no-anaconda-upload --no-activate
+          python -m build -sdist
+          cp dist/nimble* wheelhouse/
 
       # retention days param critical for cost saving wrt free/paid storage.
       - uses: actions/upload-artifact@v3
         with:
-          name: ${{inputs.saveName}}
+          name: ${{inputs.saveNameWheel}}
           path: ./wheelhouse/
           retention-days: 1
