--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,13 +11,18 @@ jobs:
     uses: ./.github/workflows/buildWheels.yml
     with:
       saveNameWheel: built_wheel
+
+  build-channel:
+    uses: ./.github/workflows/buildWheels.yml
+    with:
+      saveNameWheel: built_wheel
       saveNameConda: built_channel
 
   build-site:
     # try to build the site regardless of how much of the previous job
     # matrix completed. There are additional sanity checks within.
     if: ${{ always() }}
-    needs: [build-wheels]
+    needs: [build-wheels, build-channel]
     uses: ./.github/workflows/buildSite.yml
     with:
       saveNameWheel: built_wheel
