--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -18,7 +18,7 @@ jobs:
     name: ${{ matrix.pyVer}} for ${{ matrix.os}}
     # This will automatically split off concurrent jobs running-on each value
     runs-on: ${{ matrix.os}}
-    stragegy:
+    strategy:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
