--- a/.github/workflows/buildWheels.yml
+++ b/.github/workflows/buildWheels.yml
@@ -61,6 +61,7 @@ jobs:
           output-dir: wheelhouse
 
       - name: Build source dist and any py wheel
+        shell: bash
         run: |
           python -m build -sdist
           cp dist/nimble* wheelhouse/
