--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
       saveNameWheel: built_wheel
 
   build-channel:
+    needs: [build-wheels]
     uses: ./.github/workflows/buildCondaChannel.yml
     with:
       saveNameWheel: built_wheel
@@ -22,7 +23,7 @@ jobs:
     # try to build the site regardless of how much of the previous job
     # matrix completed. There are additional sanity checks within.
     if: ${{ always() }}
-    needs: [build-wheels, build-channel]
+    needs: [build-channel]
     uses: ./.github/workflows/buildSite.yml
     with:
       saveNameWheel: built_wheel
