--- a/.github/workflows/test-workflow.yml
+++ b/.github/workflows/test-workflow.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        pyVer: ["cp3*"]
+        pyVer: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - name: Checkout code
